# lit

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
.github/workflows/: python-tests.yaml
cli/: commands.py  main.py  parser.py
commands/: init.py
core/commons/: exeptions.py
core/constants/: directories.py
core/snapshots/: builder.py  exceptions.py  loader.py  reader.py  repo.py  schemas.py  utils.py  writer.py
core/structure/: exceptions.py  structure.py
core/utils/: decorators.py  exceptions.py
lit/: config.py
lit/cli/: commands.py  main.py  parser.py
lit/commands/: init.py
lit/core/commons/: exeptions.py
lit/core/snapshots/: builder.py  exceptions.py  reader.py  repo.py  schemas.py  writer.py
lit/core/structure/: exceptions.py  structure.py
tests/: conftest.py
tests/integration/: test_cli_commands.py
tests/unit/: conftest.py  test_commands.py  test_create_repo.py  test_snapshot_equality.py  test_snapshot_loader.py  test_snapshot_reader.py  test_snapshot_schema_serialization.py  test_snapshot_writer.py  utils.py
