[project]
name = "lit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
exclude = [".git", ".lit", "__pycache__", "build", "dist"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "I"]
