[project]
name = "lit"
version = "0.1.0"
description = "A version control system written in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lit = "lit.cli.main:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lit"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
exclude = [".git", ".lit", "__pycache__", "build", "dist"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "I"]
